# GeoSpace

./: CMakeLists.txt  GeoSpaceServer.properties  LICENSE  README.md  tasks.org
include/: handlers.hpp  utility.hpp
src/: handlers.cpp  main.cpp
